# spark-local-workspace

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/: data.csv
src/spark_practice/: my_code.py
